styled and added buttons to the homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>{{title}}</title>
   </head>
   <body>
-    <h1>{{title}}</h1>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    GS
+  </a>
+  <div class="">
+
+    <button type="button" class="btn btn-primary">Create Account</button>
+    <button type="button" class="btn btn-success nav-btn">Login</button>
+  </div>
+</nav>
+    <h1>{{mtitle}}</h1>
+    <h6>{{content}}</h6>
   </body>
 </html>
