--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,8 +12,9 @@
     GS
   </a>
   <div class="">
-
+    <a href="/create">
     <button type="button" class="btn btn-primary">Create Account</button>
+  </a>
     <button type="button" class="btn btn-success nav-btn">Login</button>
   </div>
 </nav>
